2008-04-17  David Smith  <dsmith@redhat.com>

	* tapsets.cxx (utrace_builder::build): Make sure that the PATH of
	'process("PATH")' probes is an absolute path.
	(utrace_derived_probe_group::emit_module_decls): Made calls to
	utrace probe handler functions conditional on which types of
	utrace probes are going to be output.

2008-04-16  Frank Ch. Eigler  <fche@elastic.org>

	* tapsets.cxx (task_finder_derived_probe): Add dummy constructor
	for old (RHEL4) gcc compatibility.

2008-04-16  Frank Ch. Eigler  <fche@elastic.org>

	PR 6417: From Srinivasa DS <srinivasa@in.ibm.com>:
	* tapsets.cxx (build_blacklist): Extend.

2008-04-15  David Smith  <dsmith@redhat.com>

	* session.h (struct systemtap_session): Added utrace_derived_probe
	group and task_finder_derived_probe_group members.
	* elaborate.cxx (systemtap_session::systemtap_session): Added
	initialization of utrace_derived_probes and
	task_finder_derived_probes.
	* tapsets.cxx (struct task_finder_derived_probe_group): New
	derived_probe_group to handle task_finder framework.
	(struct utrace_derived_probe_group): New derived_probe_group to
	handle utrace probes.

2008-04-15  Frank Ch. Eigler  <fche@elastic.org>

	PR 6405 cont'd.
	* Makefile.am (AM_CFLAGS): Remove -Wshadow, as it triggers for
	new stapio (modname global vs. dwfl headers).

2008-04-15  Frank Ch. Eigler  <fche@elastic.org>

	PR 6405
	* buildrun.cxx (compile_pass): Add STAPCONF_MODULE_NSECTIONS.

2008-04-14  David Smith  <dsmith@redhat.com>

	* elaborate.h (struct derived_probe_group): Removed
	emit_module_header virtual function.
	* translate.cxx (c_unparser::emit_common_header): Removed calls to
	emit_module_header function.
	* tapsets.cxx (be_derived_probe>): Removed emit_module_header function.
	(struct timer_derived_probe_group): Ditto.
	(struct profile_derived_probe_group): Ditto.
	(struct procfs_derived_probe_group): Ditto.
	(struct hrtimer_derived_probe_group): Ditto.
	(struct perfmon_derived_probe_group): Ditto.