@@ -1,3 +1,7 @@
+2008-04-17  Josh Stone  <joshua.i.stone@intel.com>
+
+	* tapsets.cxx (build_blacklist): Fix regexps for atomics.
+
 2008-04-17  David Smith  <dsmith@redhat.com>
 
 	* tapsets.cxx (utrace_builder::build): Make sure that the PATH of
